--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@ p {
 <p>Javier Menéndez-Blázquez <a href="https://orcid.org/0000-0002-1882-7896"><img src="images/orcid.svg" alt="ORCID logo" width="19"></a>, Jessica Ruff, Ricardo Sagarminaga, Brendan J. Godley &amp; David March</p>
 <p>doi: (preprint/final publication)</p>
 <hr>
-<p>Description of the page: this page is created for support visualization of the data in the maintext of the manuscript</p>
-<p>doi:</p>
+<p>This page provides additional visual material that supports and expands upon the analyses presented in the main text of the manuscript. It includes rotating 3D visualizations of the Utilization Distributions (UDs) derived from bio-logging data. These material help to better conceptualize the vertical and horizontal structure of habitat use, and to illustrate the contrasting patterns observed between day and night periods, as well as the differential interactions with drifting longlines (LL) and trawlers (TW) data from Global Fishing Watch (GFW) - <em>Fishing Events</em> dataset.</p>
+<p><img src="images/zenodo.17830950.svg" class="img-fluid"></p>
+<p><br></p>
 <table class="caption-top table">
 <colgroup>
 <col style="width: 50%">
@@ -93,7 +94,7 @@ p {
 </tr>
 </tbody>
 </table>
-<p>The images shows a rotating view to display the 3D Utilization Distribution (UD), ilustrating significant differences between day and night periods for one of the tagged sea turtles <u>(</u><em>organismID</em> #200043) [see <strong>Figure 3</strong> e-f in the main text].</p>
+<p>Viz 1: The images shows a rotating view to display the 3D Utilization Distribution (UD), ilustrating significant differences between day and night periods for one of the tagged sea turtles <u>(</u><em>organismID</em> #200043) [see <strong>Figure 3</strong> e-f in the main text].</p>
 <p><br></p>
 <p><br></p>
 <p><br></p>
@@ -113,7 +114,7 @@ p {
 </tr>
 </tbody>
 </table>
-<p>The images show a rotating view of the 3D UDS to illustrate spatial overlap and the presence of trawlers and longlines, highlighting differences between day and night periods for one of the tagged sea turtles (organismID #200043) [see <strong>Figure 6</strong> in the main text]</p>
+<p>Viz 2: The images show a rotating view of the 3D UDS to illustrate spatial overlap and the presence of trawlers and longlines, highlighting differences between day and night periods for one of the tagged sea turtles (organismID #200043) [see <strong>Figure 6</strong> in the main text]</p>
 <p><br></p>
 <p><br></p>
 </section>
@@ -126,9 +127,8 @@ p {
 </section>
 <section id="open-research" class="level2">
 <h2 class="anchored" data-anchor-id="open-research">Open Research</h2>
-<p>All analyses were programed in R (v 4.4.1) (R Core Team&nbsp;<a href="https://onlinelibrary.wiley.com/doi/10.1111/faf.70017?af=R#faf70017-bib-0038">2024</a>). Code and scripts generated are available from publication GitHub repository</p>
-<p><a href="https://github.com/jmenblaz"><img src="images/github-mark.svg" alt="GitHub logo" width="22" height="22"></a> . DOI: <a href="https://doi.org/10.5281/zenodo.15551823">10.5281/zenodo.15551823</a></p>
-<p><a href="https://github.com/SpatialMarine/raor_sat_monitoring_sml">github.com/SpatialMarine/raor_sat_monitoring_sml</a></p>
+<p>All analyses were programed in R (v 4.4.1) (R Core Team&nbsp;<a href="https://onlinelibrary.wiley.com/doi/10.1111/faf.70017?af=R#faf70017-bib-0038">2024</a>). Code and scripts generated are available from publication GitHub repository (<a href="https://github.com/SpatialMarine/seaturtle_3dhomerange">github.com/SpatialMarine/seaturtle_3dhomerange</a>; DOI: <a href="https://doi.org/10.5281/zenodo.15551823">10.5281/zenodo.15551823</a>)</p>
+<p><a href="https://github.com/jmenblaz"><img src="images/github-mark.svg" alt="GitHub logo" width="22" height="22"></a> .</p>
 </section>
 <section id="acknowledgements" class="level2">
 <h2 class="anchored" data-anchor-id="acknowledgements">Acknowledgements</h2>
