--- a/index.html
+++ b/index.html
@@ -122,13 +122,12 @@ p {
 <section id="license" class="level2">
 <h2 class="anchored" data-anchor-id="license">License</h2>
 <p>Copyright <sup>(c)</sup> 2025 · MIT License</p>
-<p>Page and DataViz by Javier Menéndez-Blázquez</p>
-<p><span class="citation" data-cites="jmenblaz">@jmenblaz</span> <a href="https://github.com/jmenblaz"><img src="images/github-mark.svg" alt="GitHub logo" width="22" height="23"></a> <a href="https://www.linkedin.com/in/jmenendezblazquez/"><img src="images/linkedin_short.svg" alt="Linkedin logo" width="22"></a> <a href="https://bsky.app/profile/jmenblaz.bsky.social"><img src="images/bluesky.svg" alt="Bluesky logo" width="22" height="19"></a></p>
+<p>DataViz and site by</p>
+<p><strong>Javier Menéndez-Blázquez</strong> · <span class="citation" data-cites="jmenblaz">@jmenblaz</span> <a href="https://github.com/jmenblaz"><img src="images/github-mark.svg" alt="GitHub logo" width="22" height="23"></a> <a href="https://www.linkedin.com/in/jmenendezblazquez/"><img src="images/linkedin_short.svg" alt="Linkedin logo" width="22"></a> <a href="https://bsky.app/profile/jmenblaz.bsky.social"><img src="images/bluesky.svg" alt="Bluesky logo" width="22" height="19"></a></p>
 </section>
 <section id="open-research" class="level2">
 <h2 class="anchored" data-anchor-id="open-research">Open Research</h2>
-<p>All analyses were programed in R (v 4.4.1) (R Core Team&nbsp;<a href="https://onlinelibrary.wiley.com/doi/10.1111/faf.70017?af=R#faf70017-bib-0038">2024</a>). Code and scripts generated are available from publication GitHub repository (<a href="https://github.com/SpatialMarine/seaturtle_3dhomerange">github.com/SpatialMarine/seaturtle_3dhomerange</a>; DOI: <a href="https://doi.org/10.5281/zenodo.15551823">10.5281/zenodo.15551823</a>)</p>
-<p><a href="https://github.com/jmenblaz"><img src="images/github-mark.svg" alt="GitHub logo" width="22" height="22"></a> .</p>
+<p>All analyses were programed in <code>R</code> (v 4.4.5) (R Core Team&nbsp;2024). Code and scripts generated are available from publication GitHub repository <img src="images/github-mark.svg" alt="GitHub logo" width="22" height="22"> <a href="https://github.com/SpatialMarine/seaturtle_3dhomerange">github.com/SpatialMarine/seaturtle_3dhomerange</a></p>
 </section>
 <section id="acknowledgements" class="level2">
 <h2 class="anchored" data-anchor-id="acknowledgements">Acknowledgements</h2>
