--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ p {
   text-align: center;
 }
 </style>
-<section id="seaturtle-homerange" class="level2">
-<h2 class="anchored" data-anchor-id="seaturtle-homerange">Seaturtle homerange 🐢</h2>
+<section id="d-diel-utilization-distribution-a-novel-perspective-to-understand-marine-turtle-fishery-interaction" class="level2">
+<h2 class="anchored" data-anchor-id="d-diel-utilization-distribution-a-novel-perspective-to-understand-marine-turtle-fishery-interaction">3D Diel Utilization Distribution: a novel perspective to understand marine turtle-fishery interaction</h2>
 <section id="abstract" class="level3">
 <h3 class="anchored" data-anchor-id="abstract">Abstract</h3>
 </section>
