--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@ p {
 </style>
 <section id="d-diel-utilization-distribution-a-novel-perspective-to-understand-marine-turtle-fishery-interaction" class="level2">
 <h2 class="anchored" data-anchor-id="d-diel-utilization-distribution-a-novel-perspective-to-understand-marine-turtle-fishery-interaction">3D Diel Utilization Distribution: a novel perspective to understand marine turtle-fishery interaction</h2>
+<p><strong>Javier Menéndez-Blázquez</strong> <a href="https://orcid.org/0000-0002-1882-7896"><strong><img src="images/orcid.svg" class="img-fluid" alt="ORCID logo" width="19"></strong></a><strong>, Jessica Ruff, Ricardo Sagarminaga, Brendan J. Godley &amp; David March</strong></p>
+<p><br></p>
 <section id="abstract" class="level3">
 <h3 class="anchored" data-anchor-id="abstract">Abstract</h3>
-</section>
-<section id="keywords" class="level3">
-<h3 class="anchored" data-anchor-id="keywords">keywords</h3>
-<p>Javier Menéndez-Blázquez <a href="https://orcid.org/0000-0002-1882-7896"><img src="images/orcid.svg" alt="ORCID logo" width="19"></a>, Jessica Ruff, Ricardo Sagarminaga, Brendan J. Godley &amp; David March</p>
-<p>doi: (preprint/final publication)</p>
+<p>Spatial overlap with anthropogenic activities poses significant concerns for large marine megafauna which regularly utilize the vertical dimension and are particularly susceptible to threats such as bycatch or vessel collisions. Advancements in bio-logging methods have enabled the reconstruction of 3D animal movements, offering a more accurate view of their habitat use and potential interactions with anthropogenic threats. Here, we applied a 3D spatial framework to quantify the overlap between loggerhead turtles (Caretta caretta) and two commercial fishing gear, trawlers and drifting-longlines, two of the main sources of bycatch for this species in the Western Mediterranean Sea. By using high-resolution dive data from satellite-tagged and spatial distribution of fishing, we compared 2D and 3D overlap between species utilization distributions and fishing presence. Our results reveal that 2D approaches overestimate the degree of intersection with fishing activities, with reductions of approximately 60–75% when accounting for the vertical dimension across gears, diel periods, and utilization distribution levels. This overestimation was more evident during the day, when turtles expanded their depth range. This study represents the first application of 3D overlap analysis with marine turtles and highlights the importance of integrating depth use into bycatch assessments. Our study provides a scalable framework to refine species–fishery interaction estimates and inform gear-specific, depth-targeted mitigation strategies, supporting more effective ecosystem-based conservation and dynamic ocean management.</p>
+<p><strong>Key words</strong>: <em>Bio-logging · Bycatch risk · Marine megafauna · Spatial planning · Three-dimensional overlap</em></p>
+<p><br></p>
+<p><strong>doi</strong>: <em>preprint/final publication</em></p>
 <hr>
 <p>This page provides additional visual material that supports and expands upon the analyses presented in the main text of the manuscript. It includes rotating 3D visualizations of the Utilization Distributions (UDs) derived from bio-logging data. These material help to better conceptualize the vertical and horizontal structure of habitat use, and to illustrate the contrasting patterns observed between day and night periods, as well as the differential interactions with drifting longlines (LL) and trawlers (TW) data from Global Fishing Watch (GFW) - <em>Fishing Events</em> dataset.</p>
 <p><img src="images/zenodo.17830950.svg" class="img-fluid"></p>
@@ -131,7 +132,7 @@ p {
 </section>
 <section id="acknowledgements" class="level2">
 <h2 class="anchored" data-anchor-id="acknowledgements">Acknowledgements</h2>
-<p>This study was supported by the BBVA Foundation (Ayudas Fundación BBVA a Equipos de Investigación Científica 2016), NOAA Fisheries Pacific Islands Fisheries Science Center, the Balearic Islands Coastal and Forecasting System, and the European Union’s Horizon 2020 research and innovation programme under the Marie Skłodowska-Curie grant agreement N<sup>o</sup>. 79493. David March and Javier Menéndez-Blázquez acknowledge support from the Generalitat Valenciana through the GenT program (CIDEGENT/2021/058)</p>
+<p>This study was supported by the BBVA Foundation (Ayudas Fundación BBVA a Equipos de Investigación Científica 2016), NOAA Fisheries Pacific Islands Fisheries Science Center, the Balearic Islands Coastal and Forecasting System, and the European Union’s Horizon 2020 research and innovation programme under the Marie Skłodowska-Curie grant agreement No.&nbsp;79493. Javier Menéndez-Blázquez and David March acknowledge support from the Generalitat Valenciana through the GenT program (CIDEGENT/2021/058).</p>
 </section>
 
 </main>
